@@ -72,4 +72,12 @@ public class FlagFilterEditor extends FilterEditor {
       manager.setProperty(property + ".class", FILTER_CLASS);
   }
 
+  /**
+   * Returns the class that will be set for this FilterEditor.
+   */
+  public String getFilterClassValue() {
+    return FILTER_CLASS;
+  }
+
+
 }
