@@ -89,6 +89,13 @@ public class FontFilterEditor extends FilterEditor {
       manager.setProperty(property + ".class", FILTER_CLASS);
   }
   
+  /**
+   * Returns the class that will be set for this FilterEditor.
+   */
+  public String getFilterClassValue() {
+    return FILTER_CLASS;
+  }
+
 }
 
 
